@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.1.5"
+  VERSION = "2.1.6"
 end
